[gd_scene load_steps=6 format=3 uid="uid://c7huofudv8bbh"]

[ext_resource type="Script" path="res://scripts/coke_can.gd" id="1_mvk8x"]
[ext_resource type="Texture2D" uid="uid://dly424j71le0g" path="res://assets/radaway/radaway.png" id="2_vbmff"]
[ext_resource type="FontFile" uid="uid://deaw8q1850h51" path="res://assets/fonts/PressStart2P-Regular.ttf" id="3_iyr0f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7aop"]
size = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_o340k"]
font = ExtResource("3_iyr0f")
font_size = 8
font_color = Color(0.850075, 0.867338, 0.142235, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Radaway" type="Area2D"]
z_index = 3
y_sort_enabled = true
collision_layer = 32
collision_mask = 5
script = ExtResource("1_mvk8x")
item_name = "Medkit"
base_heal_amount = 5.0
base_rheal_amount = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x7aop")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vbmff")

[node name="MaxHealthText" type="Label" parent="."]
visible = false
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -9.0
offset_right = 34.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 4
text = "HP MAX"
label_settings = SubResource("LabelSettings_o340k")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
